--- a/AI_MUNJANG/CustomPasswordView.xib
+++ b/AI_MUNJANG/CustomPasswordView.xib
@@ -36,7 +36,7 @@
                         <constraint firstAttribute="height" constant="21" id="ctD-7i-uqm"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="13"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vro-4W-0gZ" userLabel="container">
