--- a/AI_MUNJANG/CustomTextField.xib
+++ b/AI_MUNJANG/CustomTextField.xib
@@ -9,11 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="NanumSquareB.ttf">
-            <string>NanumSquareB</string>
-        </array>
         <array key="NanumSquareOTF_acR.otf">
             <string>NanumSquareOTF_acR</string>
+        </array>
+        <array key="NanumSquareR.ttf">
+            <string>NanumSquareR</string>
         </array>
     </customFonts>
     <objects>
@@ -33,8 +33,8 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="qmf-8V-JwO"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="NanumSquareB" family="NanumSquare" pointSize="14"/>
-                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="13"/>
+                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vyr-3t-Izv" userLabel="container">
