--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -1064,13 +1064,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- 탈퇴 시 홍길동님의 하트 10개는 모두 삭제되며, 다시 가입해도 복구되지 않습니다.  - 회원 탈퇴와 구독권 해지는 별도로 진행되므로 반드시 회원 탈퇴 전 구독권을 해지해 주세요. " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wjB-6a-gAy">
-                                <rect key="frame" x="30" y="116" width="354" height="122"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="30" y="116" width="354" height="99.5"/>
+                                <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="15"/>
+                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ra1-CJ-ull">
-                                <rect key="frame" x="30" y="238" width="354" height="40"/>
+                                <rect key="frame" x="30" y="223.5" width="354" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="tPA-rv-18r"/>
                                 </constraints>
@@ -1084,42 +1084,44 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JtR-Em-mNH" userLabel="border">
-                                <rect key="frame" x="20" y="286" width="374" height="1"/>
+                                <rect key="frame" x="20" y="271.5" width="374" height="1"/>
                                 <color key="backgroundColor" systemColor="systemGray4Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="bch-Sg-tuc"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kQB-Z7-n3C" customClass="CustomCheckBoxLabel" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="307" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="292.5" width="414" height="40"/>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="q6b-eY-z8Q"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L4q-LB-KgU" customClass="CustomCheckBoxLabel" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="355" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="340.5" width="414" height="40"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="3jo-f8-BAN"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="탈퇴를 위해 필수 항목에 동의해주세요." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYM-5j-hEi">
-                                <rect key="frame" x="24" y="415" width="366" height="30"/>
+                                <rect key="frame" x="24" y="400.5" width="366" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="FCP-5R-sSr"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="14"/>
                                 <color key="textColor" red="1" green="0.37327274659999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="lhR-9c-njU">
-                                <rect key="frame" x="20" y="477" width="374" height="52"/>
+                                <rect key="frame" x="20" y="458.5" width="374" height="52"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CnR-J9-T0Z">
                                         <rect key="frame" x="0.0" y="0.0" width="179" height="52"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="취소"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="취소">
+                                            <color key="titleColor" red="0.015686274509803921" green="0.74901960784313726" blue="0.33333333333333331" alpha="0.89803921568627454" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
                                             <action selector="clickedCancel:" destination="mZF-x9-q7E" eventType="touchUpInside" id="Unc-WH-djR"/>
                                         </connections>
@@ -1150,14 +1152,14 @@
                             <constraint firstItem="R7H-he-ApI" firstAttribute="trailing" secondItem="ra1-CJ-ull" secondAttribute="trailing" constant="30" id="9ay-5Z-4ni"/>
                             <constraint firstItem="kQB-Z7-n3C" firstAttribute="leading" secondItem="R7H-he-ApI" secondAttribute="leading" id="AoC-97-57t"/>
                             <constraint firstItem="R7H-he-ApI" firstAttribute="trailing" secondItem="lhR-9c-njU" secondAttribute="trailing" constant="20" id="CZC-bc-8zq"/>
-                            <constraint firstItem="ra1-CJ-ull" firstAttribute="top" secondItem="wjB-6a-gAy" secondAttribute="bottom" id="E6r-4q-h6k"/>
+                            <constraint firstItem="ra1-CJ-ull" firstAttribute="top" secondItem="wjB-6a-gAy" secondAttribute="bottom" constant="8" id="E6r-4q-h6k"/>
                             <constraint firstItem="R7H-he-ApI" firstAttribute="trailing" secondItem="xYM-5j-hEi" secondAttribute="trailing" constant="24" id="NA4-ED-qHM"/>
                             <constraint firstItem="wjB-6a-gAy" firstAttribute="leading" secondItem="R7H-he-ApI" secondAttribute="leading" constant="30" id="Of3-q8-2ZX"/>
                             <constraint firstItem="JtR-Em-mNH" firstAttribute="top" secondItem="ra1-CJ-ull" secondAttribute="bottom" constant="8" id="QP9-kq-SYL"/>
                             <constraint firstItem="kQB-Z7-n3C" firstAttribute="trailing" secondItem="R7H-he-ApI" secondAttribute="trailing" id="SDA-cP-vkZ"/>
                             <constraint firstItem="L4q-LB-KgU" firstAttribute="leading" secondItem="R7H-he-ApI" secondAttribute="leading" id="TUg-pa-xwd"/>
                             <constraint firstItem="R7H-he-ApI" firstAttribute="trailing" secondItem="skI-8U-iEo" secondAttribute="trailing" constant="20" id="Zse-Op-dtZ"/>
-                            <constraint firstItem="lhR-9c-njU" firstAttribute="top" secondItem="xYM-5j-hEi" secondAttribute="bottom" constant="32" id="atc-M6-HUD"/>
+                            <constraint firstItem="lhR-9c-njU" firstAttribute="top" secondItem="xYM-5j-hEi" secondAttribute="bottom" constant="28" id="atc-M6-HUD"/>
                             <constraint firstItem="L4q-LB-KgU" firstAttribute="top" secondItem="kQB-Z7-n3C" secondAttribute="bottom" constant="8" id="bNT-zd-hJB"/>
                             <constraint firstItem="lhR-9c-njU" firstAttribute="leading" secondItem="R7H-he-ApI" secondAttribute="leading" constant="20" id="cBU-jc-iaN"/>
                             <constraint firstItem="xYM-5j-hEi" firstAttribute="top" secondItem="L4q-LB-KgU" secondAttribute="bottom" constant="20" id="dg2-gb-cCQ"/>
